# MeshCore

./: .clang-format  .clangd  .gitignore  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  QUICK_BUILD_REFERENCE.md  README.md  build-iotthinks.sh  build-repeaters-iotthinks.sh  build.py  build.sh  build_as_lib.py  companion_dfu_implementation_notes.md  library.json  platformio.credentials.ini  platformio.ini  quick-build-tbeam-usb.sh  shell.nix  sitemap.xml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  build_issue.yml  config.yml  hardware.yml
.github/workflows/: build-cardputer-adv.yml  build-firmware.yml  clang-format-check.yml  host-tests.yml  pr-build-check.yml  run-unit-tests.yml
.specstory/history/: 2026-01-09_19-36Z-project-documentation-review-request.md
boards/: ESP32-S3-WROOM-1-N8R2.json  ESP32-S3-WROOM-2-N32R8V.json  RAK_killer.json  gat562_mesh_trial_tracker.json  heltec_node_tracker.json  inhero_mr2.json  lilygo_t_impulse_plus_nrf52840.json  linux.json  m5stack_cardputer.json  muzi_base_duo.json  muzi_base_uno.json  muziworks-duo.json  nrf52840_dongle.ld  radiomaster_bandit.json  rpi_zero_2w.json  station-g1.json  super_mini_esp32c3.json  t-connect-pro.json  t_eth_elite.json  thinknode_m4.json  washtastic_nrf52840.json  waveshare_esp32s3eth.json
cli_commands/: index.html
data/: readme.md
docs/: bitchat-bridge.md  cli_commands.md  companion_protocol.md  faq.md  halo_keymind_settings.md  heltec_v3_button_actions.md  index.md  kiss_modem_protocol.md  nrf52_power_management.md  nrf52_watchdog.md  number_allocations.md  packet_format.md  payloads.md  protocol_guide.md  stats_binary_frames.md  wifi_transport_command_examples.md
examples/bap_firmware/: BAPAPI.cpp  BAPAPI.h  BAPConfig.cpp  BAPConfig.h  BAPMesh.cpp  BAPScreen.cpp  BAPScreen.h  MyMesh.h  main.cpp
examples/companion_radio/: AbstractUITask.h  DataStore.cpp  DataStore.h  MqttConfig.h  MyMesh.cpp  MyMesh.h  NodePrefs.h  UITask.h  main.cpp  uiManager.cpp
examples/kiss_modem/: KissModem.cpp  KissModem.h  main.cpp
examples/mqtt-chat-bot/: ChatBotConfig.cpp  ChatBotConfig.h  ChatBotManager.cpp  ChatBotManager.h  ChatBotMesh.cpp  ChatBotMesh.h  ChatBotPortal.cpp  ChatBotPortal.h  README.md  main.cpp
examples/remote_telemetry/: .gitignore  ConfigPortal.cpp  (+13 more)
faq/: index.html
include/: Stream.h  lgfx.h  uiDefines.h  uiManager.h  uiTouch.h  uiVars.h
logger/: ADVERT_DATA_DECODING.md  ADVERT_IMPLEMENTATION_GUIDE.md  CHANNEL_NAME_RESOLUTION.md  CHANNEL_SUBSCRIPTION_ANALYSIS.md  FILES_CREATED.md  IMPLEMENTATION_GUIDE.md  LIBRARY.md  LIBRARY_IMPLEMENTATION.md  MESSAGE_QUEUE_SYNC.md  PATH_EXAMPLES.md  PATH_EXTRACTION_FEATURE.md  PATH_RESOLUTION.md  PAYLOAD_TYPES_REFERENCE.md  QUICKSTART.md  README.md  README_LIBRARY.md  USB_VARIANT_GUIDE.md  package.json
scripts/: generate_cert_bundle.py
search/: search_index.json
sim/: .gitignore  ADAPTIVE_ROUTING.md  CHANGELOG.md  CMakeLists.txt
sim/scenarios/: scenario_50cycle.cpp  scenario_adaptive.cpp  scenario_compression.cpp  scenario_concurrent.cpp  scenario_dutycycle.cpp  scenario_flood_basic.cpp  scenario_longchain.cpp  scenario_mixed.cpp  scenario_relay_pct_sweep.cpp  scenario_routing_comparison.cpp  scenario_txpower.cpp
sim/src/: DensityEstimator.h  RoutingStrategies.h  SimBus.h  SimMetrics.h  SimNode.h  SimRadio.h  SimRuntime.h  TestRunner.h
sim/stubs/: Arduino.h  RNG.cpp  RNG.h  Stream.h
src/: BridgeLogger.cpp  BridgeLogger.h  DebugLogger.cpp  DebugLogger.h  Dispatcher.cpp  Dispatcher.h  EndianTypes.h  GroupChannel.cpp  GroupChannel.h  Identity.cpp  Identity.h  Logger.h  Mesh.cpp  Mesh.h  MeshCore.h  Packet.cpp  Packet.h  PacketLogger.cpp  PacketLogger.h  Utils.cpp  Utils.h
team/: DEVELOPMENT_PLAN.md  GETTING_STARTED.md  README.md  application.backup  build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
tests/: repeater_clock_sync_test.cpp
tools/: build_windows_exe.bat  generate_5x7_font.py  generate_font_glyphs.py  meshcore_configurator.py
(+1019 files in other folders)
